docs: add JVM compatibility section and remove em dash separators